<resources>
    <string name="app_name">LookupCVE</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search CVE</string>
    <string name="title_notifications">History</string>

    <string name="bt_submit_cve_text">FETCH</string>
    <string name="cve_hint">CVE-YYYY-NNNN(NNN)</string>
    <string name="tv_home_text">Welcome to LookupCVE application!</string>
    <string name="iv_main_logo_desc">CVE main logo</string>

    <string name="cvssMetric_txt_sample">cvssMetricV31</string>
    <string name="id_txt_sample">CVE-2019-1010218</string>
    <string name="baseScore_txt_sample">7.5</string>
    <string name="baseSeverity_txt_sample">HIGH</string>
    <string name="rowid_txt_sample">13</string>
    <string name="vectorString_txt_sample">CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:N/I:N/A:H</string>
    <string name="published_txt_sample">2019-07-22T18:15:10.917</string>
    <string name="description_txt_sample">Cherokee Webserver Latest Cherokee Web server Upto Version 1.2.103 (Current stable) is affected by: Buffer Overflow - CWE-120. The impact is: Crash. The component is: Main cherokee command. The attack vector is: Overwrite argv[0] to an insane length with execl. The fixed version is: There\'s no fix yet.</string>

    <string name="lookup_cve_fragment_info">Enter CVE number you wish to look up online using REST API call against NVD.NIST.GOV database (eg. CVE-2022-38392):</string>
</resources>