<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6sp">

    <TextView
        android:id="@+id/id_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/id_txt_sample"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vectorString_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/vectorString_txt_sample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_txt" />

    <TextView
        android:id="@+id/published_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/published_txt_sample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vectorString_txt" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/description_txt_sample"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/published_txt" />

    <TextView
        android:id="@+id/baseScore_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/baseScore_txt_sample"
        app:layout_constraintBottom_toBottomOf="@+id/id_txt"
        app:layout_constraintStart_toEndOf="@+id/id_txt"
        app:layout_constraintTop_toTopOf="@+id/id_txt"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/baseSeverity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/baseSeverity_txt_sample"
        app:layout_constraintBottom_toBottomOf="@+id/id_txt"
        app:layout_constraintStart_toEndOf="@+id/baseScore_txt"
        app:layout_constraintTop_toTopOf="@+id/id_txt"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/rowid_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowid_txt_sample"
        app:layout_constraintBottom_toBottomOf="@+id/id_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_txt"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/cvssMetric_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvssMetric_txt_sample"
        app:layout_constraintBottom_toBottomOf="@+id/published_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/published_txt"
        app:layout_constraintTop_toTopOf="@+id/published_txt"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>